newclay/test/Compiler/Propagation/Fail/DeclaredNoreturnButReturn3/main.clay
main() noreturn --> x:Int {
    x <-- 1;
}
